@@ -27,28 +27,28 @@ DIST libreoffice-core-3.6.6.2.tar.xz 107650196 SHA256 f6a20418a36678550241f66b2a
 DIST libreoffice-help-3.6.4.3.tar.xz 1863976 SHA256 ed4395f9264a27411050b0be4a953f67f754a9b7f913aad576ceef236db6686f SHA512 123009eef4d1ed342a4c23acf5ec52002cbe5f8083d1fc5d485e86f67f461765ebb34ff1edfcc0ff6d321de7f8a2bc40d87f757c66b3c2ac22785549f4098f27 WHIRLPOOL b275bded52e998e5a12111260123c7b3456d2dc7fba4e6b13ffda787b1712df4af4838ab426760f7abdb9824aced163a470255d83afb7daf46a83845bff900b8
 DIST libreoffice-help-3.6.6.2.tar.xz 1860668 SHA256 b3ebb29bb6077ccdeb65e5ae883ac349c7e81c263277f5030f242e6d782d2b8b SHA512 425e7ca64e60316a8ee5b05672bc5079400c0c0ccfe0f12079bb4b9867e88191233cc7d5770dad6a92daf50dcbf43aeecdf32dd76994b1393a486d4a5f876272 WHIRLPOOL 6e4583ee7e6d7a68a189853e74c87b60f35e4edb5addd804891082998da23eefa8b28c71975cc10c11f2373a69e95340d2d01e1f4f40ee38dfb97eab3b4282e2
 DIST libreoffice-help-4.0.2.2.tar.xz 1855072 SHA256 10a637c502952de6011024185ac54ff7e8be38b3644ef620c04af35fc85e5341 SHA512 a8426d4259b8efc88d23a55bf7441cd96e43b5d5a8fdb04e861d17d04ad595e16486b52abb04e3710f3cf1656d27c6aa05d3cdc2373226b00d886c934de1793d WHIRLPOOL 1d5bd721b90d55990e9192b80b733a1b10381f447a59fd37e83177b51f238b6fbe1594458a0df1694dc25f7b12587568c86c07de4fd584294fe2f81d015f7c65
-EBUILD libreoffice-3.6.4.3.ebuild 17474 SHA256 ebfebf22f2c06bc68f4a63e2ae74a9f0f378b79eb7fa297ead8f4741a39ce162 SHA512 2e540b456c2eaa2624cded3fe929678c5641797f0c8fbf044b760ce44c53b8008b9b70b0aa41350510fa671cf7f595acf355d8a804fdba2c7b0b3015db886858 WHIRLPOOL 5ffd405228caa4f36c7897db21ff10964b545b2180bd65854d2a9ce7e09f9b70228a294a2645c6bcb94f8635e08b9215a6a9943a54d745a927d5ce546b09fd1c
-EBUILD libreoffice-3.6.6.2.ebuild 17504 SHA256 2f6b8ea68d3f97f022a582a0fa3d473ccd3e671f9f765b5bc633933659dbdf20 SHA512 af9f5f635fc239ce17b163956c9a25ba3c928285bddfeb914866913aaf76140b18fb541fdf748e6648ecc508fc27b7418e4a71c0ae9ed677cf9c83733a80015d WHIRLPOOL 8953097e5da95e0f0ea80f871bba7531fc3e9817319e1104caf489adc81eb8938f0f4a60bb238a14681099421d4ae62a23ffbb5469145cdbd6f4c78a41cc6c9f
-EBUILD libreoffice-3.6.9999.ebuild 17506 SHA256 b28b806a32ba69fc98bf06f702d838d1019479c328e6e2ac9675170ad4174c0f SHA512 32b0ec9fb805241263c73cfa35557e3f71a22256b3835e92437c19fd04f6d157faeb6ac41c635cc41ea51e6dfc697bdb5a571252bb0a877b84fe1b6296c628d2 WHIRLPOOL 393c34cb5e36263bf38ab2703a19f47348f0e31e6b93d0a972b2a9ab21a28ca235a20c97708e6fe97bf8e347efeb2d1455a2e9e248f9fdb20a053da436e994bd
-EBUILD libreoffice-4.0.2.2.ebuild 17501 SHA256 0bc642ab8c14c36c766eb48b4cbb1548bcab190c22f685a3c8bf804a26f60795 SHA512 a5c84e5e4e4cec44c02c85a69d93d6731b0d60280bcf4a8c105f4a97893627f6375dc1957234a437db4322b54c72414036cb377ae46d29943e0c0b029ffb627e WHIRLPOOL c52007c7936001c6332585017727d6eab24fe3774b858e41cadb31d5cf6436b0b245130bce2cce7f93443560f00bdd400747b109bdc058b283a37388a993a123
-EBUILD libreoffice-4.0.9999.ebuild 17442 SHA256 f0ad13db9efdfa5f9b989a03afdfb4698b48f56635b6e47b369c67f847180535 SHA512 0a960ea8f50f4c338a2de7cd280e10a787e312e1e62e295248d06b10625ac71d3ecbcb248bc8b0abcbcc0cfba802b99f508395c191cb7a39774ce90e6aa4a7d1 WHIRLPOOL 34031355ecdd90ffc2eb578fc3b21134b2dce080721904dab89b7a3902fbc44f7e270375f0a66575dc1a7006df87620ec992b11b59efe0ec7e85eac787b88c67
-EBUILD libreoffice-9999-r2.ebuild 17407 SHA256 a9b4856e57c44717856905b5bc8f3ccd97edaa73b6ae9f8b13194b01f5b26ad4 SHA512 6c2c74d46771b56b465c67afaf2d9dab4346307f92dedf85698e819636f3bd4151943545236d1965308c4e93ba7586b76490dfe480e12708840f3b1fd4c9a2cc WHIRLPOOL d7e6cbec12b05e40f382db014ab771725031b31a9095adaf794bca1f189431a5c6270450d7fa0afba72a6e294947ee35bde0cf857bc7c540cc4a81f5fdd7d8dd
-MISC ChangeLog 83846 SHA256 c7ba703e7659092a08845f08e40a3213623b34c4cc647844972f7529ce438bbc SHA512 b0a6d37dee1ff4dae49e0282319ebb7868bab589a182b0b06927e2ffaecf7c237decf526329c318b2a4c9ce6bdeed4d883ff63b30428a7d9cbfbaff1d5baded3 WHIRLPOOL 1fe7b8760d71f7fa89a3559819a8a15a27de943cd28df69edda99a4d9f1920afcd65044fc6b902cfbe146a3de01505ea090201a11ce1efefea6b7bc982dfe148
+EBUILD libreoffice-3.6.4.3.ebuild 17470 SHA256 dd2f77221a097aa195f423e7b8e13a1fc0f90d7bd1dfd17db46029cab38ed46f SHA512 1dab92d24842282d4dc4e3dc80da4f1afe58ffb0903dab6980b5e87093cce13659b554f653906057c81f6dde18d3244b091e551ca178d29fc8dbeafd11bc003e WHIRLPOOL 56bb8e3d0f2938f6be518d2cabdae0038098fe5e3ba1fa45a95820b91461ba9398988c562dc0393569b76b11a3414e025210715c482ea341e23b10ccc4d014c1
+EBUILD libreoffice-3.6.6.2.ebuild 17499 SHA256 308885e57885b384319e4fd92379aa646cc44201435bd4a8988400d7de1cc746 SHA512 7c5ce2c530aec42e5eaa80d6f7fc9f15cf26df3eaf1a1729dea69135ba074e7f7f2a15b87d3e4b17fc3fb7dbf0baaeabf27172a9838fd418de0bf215707bfdc9 WHIRLPOOL 750d89f168b5c8a497e721fb215f4e54b5bd60bedfa15ce4bc73b677180bc9adaa72ea813e66268c5574486ee8e9c349951a50362747c96fa63d773dbf0b9313
+EBUILD libreoffice-3.6.9999.ebuild 17502 SHA256 3d2197e574b2536738928410075742e1b81b2b46cb358ff2b07c25c2b19038d3 SHA512 3b42606bb4e0cc8b130732a768e77317c8c11eadc1f937d5ced0fc25ca4eaa4031b61dd116084c9d99ec7fc7491c60907552305fac4bcf212a83dfdf9aaaddeb WHIRLPOOL 9d4d2706a4ad3f586a262f6feccc121bcd6db304b424821801cbdc0d1ffd3f4585d34b3c5fab7972137be4bfe80cad05b0ca1b2b1ec49e6ae28d5fa41df4efc1
+EBUILD libreoffice-4.0.2.2.ebuild 17497 SHA256 b7d8f10a9578c30717dd8a1341a9842c7565858815052c2361f31f4f90a9edaf SHA512 6057c91524b0ea86f00f9b48f4c6c35dcfc107e56c797d142760f16a43e04be2632c96449ab6c4ce59602b156ddf5d9f4371d72712df2cfe413642273a676c41 WHIRLPOOL 4220fe454d0d7730c4d36977351f4e4cd18a7206807ac891b10452cc1bc2dfb1cb56c583da6383d77a7efa09ec8552ce1007e6766b44cb4024eb81c9460efd20
+EBUILD libreoffice-4.0.9999.ebuild 17438 SHA256 3f44d80132bec348db5654f39b92638a282c165bb5f8bdbc03ce15aa1b471ac9 SHA512 46dfa59c3dd4305d0f5bda94aecdd4f21e25785b9eb569e9c60fe42650522ccb8a153ddb6fd39a78d5cae66c8891526654acfb01fbfd7f1653ea6773ecf85fab WHIRLPOOL 3fd60d5dd51add99c3b101bf439a07ba98d3c9c1c8cfbd08016ad3cf218dcacb5cc357ca891d0a3514f7459ea481159b8dd681a303e65e0811392fed75effd8e
+EBUILD libreoffice-9999-r2.ebuild 17403 SHA256 c28b9a2e144bfff209792c050f3853006a93d7bd8f14e4913043c3f3a6c50be0 SHA512 4e0594432a95588565ecaa6d93d98754fc45893797aa4358c0364844a3d92b3982902b27ea4412a5a922240e0d95f2c2fc41e9e38efb3edd017f90bdff17a238 WHIRLPOOL 9f7a157c11e3f337041c934c816bae961f810fab03a442f3c31f657704848bd87a4ed148b716d2cd75486a9c13c764fd4a93a17d13f1b6f3920035ddfe3afc0d
+MISC ChangeLog 84238 SHA256 d6b1b791e2cebc065d2d23cdfb881fe40b5fbdde259308e98d44b9daba4309c6 SHA512 f19915b5da8c980d901befbc68b195ec08d71f90db8495691b45b53751e42ff0b64e26e55be7cc42ddb369638b9413be1a87c9c8ae72e3daa5d2988da8d01dea WHIRLPOOL 65821d8504b7ed0745389377a6292fd0675c358bbcd85eee9ca9e5c9ad72386d8cd4806846d10a30527fae0aa17e22d13380ded81f06cefb66f718139f80a199
 MISC metadata.xml 1176 SHA256 c1690efe4b2a0fa49801e5cbe66637e25ba71fb902115a75d363f6fe7dc444fb SHA512 2889263d6cf5388d402b2c3999d471e2a2e8c852dcd50755d9f6fd7a549e8b70af7afb66d2f58bc8b9f7bedb4d01a05dda6159c5433a5fdce20ba69f49b9d1b1 WHIRLPOOL e4b548267c79bee3de7bdec839c0fd4d2f1166ded0464d65e6103e63ffb8fb9c08c6a9ff0d01ab09c02826ff1b0b0233a55c5d49b701e963d8c732685b3267dd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRes0XAAoJEOSiRoyO7jvo1S8QAK0YzD5he5BtYxKvrmU9atl+
-8hEnEYnTMiKGvvVE66HxDNxenAS9W1MbydhFr02SgTwUTpFZzoqqmgiVdvaFffoz
-0T84ep/OvnAacZAs9JtQ0ioWmvtNcfwI0r3O+irnNXG6+HL/p0SBht4SuPIxw/yo
-QftpTrQgQfNTWlQP3Aqup0ubpzvQi2jAMT5ISaUz5XenTSjwRkpNsVOjKo+kZ8e+
-UxSqgMkCxrAAJAAHGNFS5e50X+TcfgRI/86R5omZDRkAPAZF7ABGMOSdK8sN9sPh
-Q+/yH0cCJ5my2C3bh82CVYT9WMpyICUAzLfHVyWzB6RAYbhPYG9KK0nrROE7/WfN
-PK8LRUbar2K6tUCC2eUoV/qxPrTJhdIk6I4P1JTSg6/MF2mSegbbFymB+p/kxRV9
-dxjsCiyhH+IU5JB4aOiD+0Cmx3zYdoOT8TxIO964eLeUGMviKEcjgr2tEFDaoxaI
-bWFjb9UwUcwXuhC8dIbeTPQ2tPvDOuMO4wpNBHED+pzyAi7/hNNtTslgP09Rxf5q
-mJxdV9kMe9DtwpxihTEes4vCysiV7IlsoyXSdcJuWb6/5uGdm7oWS6u/ilZ5s26X
-WncH6uDCElumg9KLqZj3/rBtsGUNJ7I0oAgx2pxEIqCpIh2cBEowKCktQsUeeSkT
-ePx7LZXhgXZte9L73xBj
-=mby7
+iQIcBAEBCAAGBQJRfnStAAoJELp701BxlEWfoXUP/1HDXwXzHJeKkjTlPntSq88Q
+4catlLf/shecd7K2H+sLnP3dEZkuJrKUGi6b4M5Gs9CZJHne2Frq1/ZbcVByxZf6
+fFKxjYSfNkRcRbDCzu369fXhcb76ZzCtslOcxb8tYbi151ttJAWrHVpO42cXQsG9
+u1zigTfSXT2DWumr7YJKZxht+VQa6pQ7cMfmxuoA5dSogjZ/cALjI2p1NrtdCc3Z
+XqUlBgql1/Wp1eaiBF1SVsv4irE/3X0TciawNbX2H5ZEVXQDHOCGpveIRPHKR8W0
+/v37rieXcGiqcoB9TX1XyMsmpCCg+/n9NA0YcGnu9/XIf3mbJMO2+/Aay2k1NeOK
+geN5RYmflKqUA5VwwNOSKmLJlpt2n/TJ3YbefDvyd/OL32VOF4uARO8wht+jFbRt
+AAHnM/wiKVDBfd5hHjXDdt1X2ChJLZ6O7ni2G98FfuIFAy3uEnjZHUPFtt3OfyxJ
+LQnqmYDwzuIMf8CEdyp23EAFLtyZ5SHCaXKYBe4CCtfo8YQpmUbQTTB08wgOoh2V
+sg2CSPH9iDbCW9YN66LCOnAq3DeRRunRTr5ePsav64s3wSPdOpkuockxHyjwBK/I
+Zr93CGWq2YaGZvlmAadLDo3xHJRRpoOn7FkRoitItA1UhuQNmbte+Hdk6o/VwWkk
+7tmvy9diAaIHd+Bd/zQW
+=M/k+
 -----END PGP SIGNATURE-----
