@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/libreoffice-3.6.4.3.ebuild,v 1.6 2012/12/19 20:22:04 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/libreoffice-3.6.4.3.ebuild,v 1.7 2013/04/29 13:24:57 ago Exp $
 
 EAPI=4
 
@@ -90,7 +90,8 @@ unset lo_xt
 
 LICENSE="|| ( LGPL-3 MPL-1.1 )"
 SLOT="0"
-[[ ${PV} == *9999* ]] || KEYWORDS="amd64 ~arm ppc x86 ~amd64-linux ~x86-linux"
+[[ ${PV} == *9999* ]] || \
+KEYWORDS="amd64 ~arm ppc x86 ~amd64-linux ~x86-linux"
 
 COMMON_DEPEND="
 	app-arch/zip
