@@ -2,14 +2,24 @@
 Hash: SHA256
 
 DIST obs-build-20130227.tar.gz 147092 SHA256 231c6b5c31e07dfedbd1b0a5ec30040529639bf376994b8c2837f3a9a3c3e0de SHA512 6b27c70a44dbb2d0bee7113d84eb3671b8ac8a09b9dc676d0989d93e6cc5f55033f14f67b012d8dad846179ff6f095190e897e14af5c52cdce1b9d98554777a4 WHIRLPOOL 5b25f55a5fe3919c1ac97228d87cb406bf657eb74cdedb169f236023fa7dd3d978ee699a2cc9755bdba5a070df83f69709f63667f8da5eea2a2fb13c1b26a18d
-EBUILD suse-build-2013.02.27.ebuild 1450 SHA256 3da811fd8673da98754143df62f0e7e49ed591f602e7f00d400ee3bde551d847 SHA512 5fd83ee245328e1e397b46b9318c272ae85ca83388277bd18538b55abab9e4a14a4ece05d18b50d1a637dd452075d6fdf20db7db15e88fae4bf3a49dfb96fbc3 WHIRLPOOL edccca7606e26f8c8e5e7ef7b67e9f6a9d2720b50695c5069df908ae8cb94ae55183a1463f31614d2a88045f95ed7384f79e12cf6ee718ee9510c38f0be23296
+EBUILD suse-build-2013.02.27.ebuild 1450 SHA256 d9afb7d5c42da3efa8ed0f0d31c09e1c9ffccc32252a5a55f33ea402fe4ea6ab SHA512 b5dab0b7fca0fb4cbd2598f9189368405eef5b3f27660eae1d907ab58a06f1161faeb44e0bdf530fc19b616375b1c78886e99674aa45b9c699e5f7e02167a30b WHIRLPOOL 3227d83fee270c0335e1bcce05ac4561f03153a7358d9b1be229763b7e7ba5bddbc29bb592653e3c46d8c6a6871c84a56da66b9cb95194e06f4639cc1aaa323a
 EBUILD suse-build-9999.ebuild 1444 SHA256 5c740b81d9becb1c8e64395357c937b68464dc5dd252a2c2e5343d5921372329 SHA512 87a8fd8c805c11a76dfbaca7202e7f5c962c329f0f688393bb364f169116eae78b5f12e4aee94e2fe395c93d55abf27b34bceef57c5d361c386b6b3c70b83177 WHIRLPOOL 53dbed65307e3a15f0853136472d86017d5524a188569575371b79ac4922142b69e85c1995e2f3fd942c95e4362c2bcd71a488ab324c063a1d9becbeda16e5b1
-MISC ChangeLog 2730 SHA256 b4ef4f05a879232982b6982ec81a09e47a460c55eda49acfa79213b2f0c74171 SHA512 37698f4af9cb8441aadfa898e83ed38258a75f0c5364268c1d856d10ac5831b69a65ee1d11c01db92cce288c9c641b3c259a7f23cb86eee3e9f00749e2ee2cc7 WHIRLPOOL bf06024b6df4227638edfce7bd36edfa7057657bd75a99cd4d3e3f581e374386538e51cb59783ed8a23e1f1760f94aed2aa9777270d85c7db41ff76abc615c69
+MISC ChangeLog 2866 SHA256 40feabdd830cfb498ca12a1e06e5b840ea9d5b4b6f6d9bef18609779d082b96b SHA512 49ef193ed67060fb7bd689a6f1ed1ce85ca6d3f59c18ada82829929873854c17ff55d85f92ac328204803a11969e623788100f09d2f8c56f06d8f2d5d9daae0b WHIRLPOOL 2ca24415d47a1b3ce5b2f642e0b8c64ac32c2be92b439b7046fe4dcf3fd30ea5cb149ba95454efc609961f113b47c2d9133f39c6daa95da283a7f1e3c821cb52
 MISC metadata.xml 409 SHA256 cc5c5706ac5406afec663da06a93e4c91f96c2ad3dce51e7a6769d8da9031205 SHA512 e27aada2ced11515a108f0203cad9a6cede66c3d33ea91846113a118933107024fabefb5cdfdb8d6159058d4fd3e962d29a205fc637df976a156582e48e60e7b WHIRLPOOL c62713b4d1e52190ba07d06e604b672244efbbe76d95b29565487035a4e77956b348daa59355011c80bfae0860435844285a60c76b9714c5c4fdeb77f6f1f4b4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlFG6vYACgkQpFCI79Oct8UejAEAhycpjT9mV/YUAKmOIENAyRMM
-yFv0iBAV8OgI4HpwvZoBANVK708+a2/Bph/7s3dXbCZerwjo/mo+T1FF95bu+ksA
-=zFxv
+iQIcBAEBCAAGBQJRfnQIAAoJELp701BxlEWfOJEP/2XPaLWFGWPVRFBvH7sOGir4
+C34sQ9coUF78F/TBRZO6KI1Hn/6MqLs6QwGWJ1kNNP5MA39Vfypp7DImuLkyd5Si
+DNtR06T+8OBGED8IF9FYDFqs47LSpgmRV8CDlYZ+ou0E43/JqxcX/4a4z/PXJYdS
+85NbQ6IY4+bY+OKFr5iZTEfFvzDA6M236o5yU8GKC2A4dU3NxFR+FDOcSeXVyXZR
+ecI0OOcEwI7wGtOOWbsonS9LIVlRJo5czZC8BVOwXxO8l03CbakNPQwFRPMzjH/O
+dkbdRAAMbWmPY2WXcrLHFdOilE8zAFHvSVHkq9AT8sHqPGhyd7+KEViKBdE7qOzC
+3oR5FZN19XJuuy9AkmnoX9EgtjlRuff0nejp82+doohAM3cnOcYMOfwAN9OU29gh
+iM9FEvg1iZ2nwodcCT4dEo5XR9MFUH/O1r+SFfUhNC7YYtxvKzu5wmv9PqtupUoS
+vXHuOy2UnBCFihplnGSsvYmIrIAW9t8hkwKiS3pmTYSExdafcl9a/fVohU2oIY5r
+I3D6B1iu3UzRsHroeNVQmqYQRpOyvwV+X5lzCkyKYFc6NcRuG7i9QA/Qka7rfgqo
+eXJNHUWm5TiYZOJDVV56aXTxkHVkFqWcbWlli+RChxgG4LCKV7DH6unkRRqvVhyF
+SwnN/GVmBk0ynSbvfaB9
+=fh9H
 -----END PGP SIGNATURE-----
