@@ -1,6 +1,15 @@
 # ChangeLog for app-office/libreoffice
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.461 2013/04/26 18:53:09 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.463 2013/04/29 13:24:57 ago Exp $
+
+  29 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libreoffice-3.6.4.3.ebuild,
+  libreoffice-3.6.6.2.ebuild, libreoffice-3.6.9999.ebuild,
+  libreoffice-4.0.2.2.ebuild, libreoffice-4.0.9999.ebuild,
+  libreoffice-9999-r2.ebuild:
+  Move KEYWORDS on another line to avoid ekeyword failure
+
+  29 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libreoffice-3.6.6.2.ebuild:
+  Stable for amd64, wrt bug #467460
 
   26 Apr 2013; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-4.0.9999.ebuild:
   Remove gtk3 useflag from 4.0 build so people do not fill bugs about it.
